--- a/formIAW.html
+++ b/formIAW.html
@@ -43,7 +43,7 @@
     <!-- Konten -->
     <div id="formIP">
       <h1>Input Data Mahasiswa</h1>
-      <form onsubmit="addMhs()" method="POST">
+      <form onsubmit="addMhs()">
         <table>
           <tr>
             <th><label for="nim">NIM</label></th>
